SED-2734 plan annotation not supported for local execution of ap (#192)
* SED-2734 add support for plans annotation

* SED-2734 support AP without descriptor

* SED-2734 refactoring Step runners